--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
